src/test/deca/context/invalid/test_duplicated_param.deca
// Description:
//    Programme testant une methode à plusieurs paramètres mais qui sont dupliqués
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
// Resultats:
//    test_context : erreur ligne 10 : Parameter  a has been duplicated
class A  {
	int getX(int a, int a){
		return 2;
	}
}

{
	A a = new A();
	println("hello");
	
}
